--- a/SlicerNNUnet/Resources/UI/SlicerNNUNet.ui
+++ b/SlicerNNUnet/Resources/UI/SlicerNNUNet.ui
@@ -12,11 +12,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="ctkCollapsibleButton" name="nnUNetInstallCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="nnUNetInstallCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>nnUNet Install</string>
      </property>
-     <property name="collapsed">
+     <property name="collapsed" stdset="0">
       <bool>true</bool>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
@@ -68,11 +68,11 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="nnUNetSettingsCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="nnUNetSettingsCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>nnUNet Run Settings</string>
      </property>
-     <property name="collapsed">
+     <property name="collapsed" stdset="0">
       <bool>true</bool>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
@@ -84,12 +84,9 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="ctkPathLineEdit" name="nnUNetModelPathEdit">
+       <widget class="ctkPathLineEdit" name="nnUNetModelPathEdit" native="true">
         <property name="toolTip">
          <string>Folder path to the nnUNet trained model. Folder should contain one dataset.json file and trained nnUNet folds folders.</string>
-        </property>
-        <property name="filters">
-         <set>ctkPathLineEdit::Dirs|ctkPathLineEdit::Drives|ctkPathLineEdit::Executable|ctkPathLineEdit::NoDot|ctkPathLineEdit::Readable</set>
         </property>
         <property name="SlicerParameterName" stdset="0">
          <string>parameter.modelPath</string>
@@ -111,17 +108,17 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="ctkSliderWidget" name="stepSizeSlider">
+       <widget class="ctkSliderWidget" name="stepSizeSlider" native="true">
         <property name="toolTip">
          <string>Overlap between each nnUNet sliding windows.</string>
         </property>
-        <property name="singleStep">
+        <property name="singleStep" stdset="0">
          <double>0.100000000000000</double>
         </property>
-        <property name="maximum">
+        <property name="maximum" stdset="0">
          <double>1.000000000000000</double>
         </property>
-        <property name="value">
+        <property name="value" stdset="0">
          <double>0.500000000000000</double>
         </property>
         <property name="SlicerParameterName" stdset="0">
@@ -273,39 +270,143 @@ augmentation (TTA):</string>
     </widget>
    </item>
    <item>
-    <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="inputVolumeLabel">
-       <property name="text">
-        <string>Input volume:</string>
-       </property>
-      </widget>
+    <widget class="QComboBox" name="comboBox">
+     <item>
+      <property name="text">
+       <string>SelectVolume</string>
+      </property>
      </item>
-     <item row="0" column="1">
-      <widget class="qMRMLNodeComboBox" name="inputSelector">
+     <item>
+      <property name="text">
+       <string>SelectFolder</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item>
+    <widget class="QStackedWidget" name="stackedWidget">
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
+     <widget class="QWidget" name="page">
+      <widget class="qMRMLNodeComboBox" name="inputSelector_2" native="true">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>0</y>
+         <width>125</width>
+         <height>2</height>
+        </rect>
+       </property>
        <property name="toolTip">
         <string>Pick input volume on which to run the nnUNet inference.</string>
        </property>
-       <property name="nodeTypes">
+       <property name="nodeTypes" stdset="0">
         <stringlist notr="true">
          <string>vtkMRMLScalarVolumeNode</string>
         </stringlist>
        </property>
-       <property name="showChildNodeTypes">
+       <property name="showChildNodeTypes" stdset="0">
         <bool>false</bool>
        </property>
-       <property name="addEnabled">
+       <property name="addEnabled" stdset="0">
         <bool>false</bool>
        </property>
-       <property name="removeEnabled">
+       <property name="removeEnabled" stdset="0">
         <bool>false</bool>
        </property>
        <property name="SlicerParameterName" stdset="0">
         <string>inputVolume</string>
        </property>
       </widget>
-     </item>
-    </layout>
+      <widget class="QWidget" name="layoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>10</y>
+         <width>307</width>
+         <height>87</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout_5">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetDefaultConstraint</enum>
+        </property>
+        <property name="formAlignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="inputVolumeLabel">
+          <property name="text">
+           <string>Input volume:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="qMRMLNodeComboBox" name="inputSelector" native="true">
+          <property name="toolTip">
+           <string>Pick input volume on which to run the nnUNet inference.</string>
+          </property>
+          <property name="nodeTypes" stdset="0">
+           <stringlist notr="true">
+            <string>vtkMRMLScalarVolumeNode</string>
+           </stringlist>
+          </property>
+          <property name="showChildNodeTypes" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="addEnabled" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="removeEnabled" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="SlicerParameterName" stdset="0">
+           <string>inputVolume</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="page_2">
+      <widget class="QWidget" name="layoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>10</y>
+         <width>301</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout_6">
+        <item row="0" column="0">
+         <widget class="QLabel" name="inputFolderLabel_3">
+          <property name="text">
+           <string>Input Folder</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="inputFolder"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="outputFolderLabel">
+          <property name="text">
+           <string>Output Folder</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="outputFolder"/>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+    </widget>
    </item>
    <item>
     <widget class="QPushButton" name="applyButton">
